Add: last changes client

--- a/src/components/EventDetails.astro
+++ b/src/components/EventDetails.astro
@@ -47,7 +47,7 @@ const venueLocation = {
   <!-- Background Image -->
   <div class="event-details__background">
     <img
-      src="/mariafer/siempreverde2.png"
+      src="/mariafer/bgLimones3.png"
       alt="Finca Siempreverde"
       class="event-details__background-image"
       loading="lazy"
@@ -56,7 +56,7 @@ const venueLocation = {
   </div>
 
   <div class="event-details__container">
-    <h2 class="event-details__heading">Detalles</h2>
+    <h2 class="event-details__heading">Evento</h2>
     
     <p class="event-details__subtitle">
       Toda la información que necesitas saber sobre el día de nuestra boda
@@ -142,7 +142,7 @@ const venueLocation = {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: center;
+    object-position: top;
   }
 
   .event-details__overlay {
